updated to initial users setup